--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:gravity="center"
     tools:context=".MainActivity">
 
+    <include layout="@layout/layout_main"/>
+
     <TextView
         android:id="@+id/textView"
         android:padding="10dp"
